tests/negative_pomidory/obj_not_found_in_page_factory.pomidor

I *click on #not_existing_obj